Fix button spacing on game overlays

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -73,14 +73,6 @@ a {
   color: 'blue';
 }
 
-
-
-.overlay .info {
-  position: absolute;
-  right: 0;
-  left: 0;
-}
-
 .button.info {
   display: inline-block;
   margin: 10px auto;
@@ -94,15 +86,12 @@ a {
   cursor: pointer;
 }
 
-.overlay > .vertical-center > .button.info {
-  top: 500px;
+.demo .button,
+.pause .button{
+  position: relative;
+  top: 300px;
 }
 
-/*.overlay input {
-  z-index: 10;
-  position: relative;
-  top:300px;
-}*/
 /*********** HIGH SCORES TABLE *****************/
 
 
